<resources>
    <string name="app_name">LocationFinder</string>

    <string name="ok">Ok</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="alert">Alert</string>
    <string name="failure">Failure</string>
    <string name="gpssettings">GPS Settings</string>
    <string name="gps_not_enabled">GPS is not enabled.So please enable GPS for better Location.</string>
    <string name="settings">Settings</string>
    <string name="unable_to_fetch_your_current_location">Unable to fetch your current location.</string>

    <string name="detected_activities_title">Detected Activities</string>
    <string name="request_activity_updates">Request updates</string>
    <string name="remove_activity_updates">Remove updates</string>
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
    <string name="not_connected">GoogleApiClient not yet connected. Try again.</string>

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <!-- Transition type strings -->

    <string name="cd_preferred_location">Preferred location marker</string>
    <string name="cd_upload_db">Upload db</string>
    <string name="send">Send</string>
    <string name="cd_delete_location">Delete location</string>
    <string name="cd_add_image_chat">Add image chat</string>
    <string name="cd_clear_address">Clear Address</string>
    <string name="num_25">25</string>
    <string name="your_location">Your Location</string>
    <string name="address">Address: </string>
    <string name="track">Track</string>
    <string name="geopoints">GeoPoints</string>
    <string name="lat">\nLat: </string>
    <string name="longitude"> Long: </string>
    <string name="radius">\nRadius: </string>
    <string name="on">On </string>
    <string name="at"> at </string>
    <string name="invitations_sent">Invitations sent: </string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="you_are_logged_in">You are logged in</string>
    <string name="signed_in_exclam">Signed In!</string>
    <string name="signed_in_canceled">Signed In canceled</string>
    <string name="unable_to_fetch_current_location">Unable to fetch your current location please try again.</string>
    <string name="no_data">No Data</string>
    <string name="save">Save</string>
    <string name="success">Success</string>
    <string name="allow_app_access_location">Please allow this app  to access your location.</string>

    <string name="save_location">Save Location</string>
    <string name="no_Locations_tagged_yet">No Locations tagged yet.</string>
    <string name="location_successfuly_added">Your location successfully added.</string>
    <string name="please_enter_proper_address">Please enter proper address</string>
    <string name="please_enter_location_name">Please enter location name.</string>
    <string name="fence_radius">Fence radius: </string>
    <string name="address_b"><b>Address: </b></string>
    <string name="location">Location</string>
    <string name="location_address_empty">Location address is empty.</string>
    <string name="same_location_exists">Location with same name already exists.</string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_currently_in">Currently in</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_notification_text">Click to return to app</string>
    <string name="title_activity_settings">Settings</string>

    <string name="desc_google_icon">Google Logo</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="sign_out">Sign Out</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_in_fmt">Signed In as %s</string>

    <string name="invitation_title">Geocare Invitation</string>
    <string name="invitation_message">Geocare Invitation message</string>
    <string name="invitation_cta">Geocare Action</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
