<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BaseActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" />

    <ImageView
        android:id="@+id/ivLocation"
        android:layout_width="@dimen/margin_30"
        android:layout_height="@dimen/margin_30"
        android:layout_centerInParent="true"
        android:contentDescription="@string/cd_preferred_location"
        app:srcCompat="@drawable/svg_preferred_loc" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_5"
        android:layout_marginRight="@dimen/margin_5"
        android:layout_marginTop="@dimen/margin_35"
        android:background="@drawable/bg_edt_w"
        android:padding="@dimen/margin_1">

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:paddingLeft="@dimen/margin_4"
            android:paddingRight="@dimen/margin_4"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="@drawable/toolbar_filter_design"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivCross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_8"
                android:layout_marginRight="@dimen/margin_8"
                android:contentDescription="@string/cd_clear_address"
                android:src="@drawable/svg_cross"
                android:visibility="visible" />
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:background="@drawable/ripple_layout_o"
        android:text="@string/save_location"
        android:textColor="@color/color_White"
        android:textSize="@dimen/textsize_20" />
</RelativeLayout>